--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Selecciona el tipo de operación:</p>
         <div id="operation-selection">
           <button id="add-sub-btn" class="operation-btn">Sumas/Restas</button>
-          <button id="mult-div-btn" class="operation-btn">Multiplicaciones/Divisiones</button>
+          <button id="mult-div-btn" class="operation-btn">Multiplic./Divis.</button>
           <button id="all-btn" class="operation-btn">Popurrí</button>
         </div>
       </div>
